# autoexp

./: LICENSE  README.md  pyproject.toml
autoexp/: cli.py  config.py  db.py  git_ops.py  report.py  train.py  validate.py
skill/: SKILL.md
skills/autoexp/: SKILL.md
templates/: config.yaml  program.md
